Fix margins mixin wrong rule decalration in _spacing.scss

--- a/src/assets/styles/_spacing.scss
+++ b/src/assets/styles/_spacing.scss
@@ -30,7 +30,7 @@
 
 @mixin margins($dim, $unit: "") {
   .m-#{$dim} {
-    margin: 10;
+    margin: $dim#{$unit};
   }
   .mt-#{$dim} {
     margin-top: $dim#{$unit};
